[workspace]
default-members = ["bin/ream"]
members = [
    "bin/ream",
    "crates/account_manager",
    "crates/common/beacon_api_types",
    "crates/common/chain/beacon",
    "crates/common/chain/lean",
    "crates/common/checkpoint_sync",
    "crates/common/consensus/beacon",
    "crates/common/consensus/lean",
    "crates/common/consensus/misc",
    "crates/common/execution_engine",
    "crates/common/executor",
    "crates/common/fork_choice",
    "crates/common/light_client",
    "crates/common/network_spec",
    "crates/common/node",
    "crates/common/operation_pool",
    "crates/common/polynomial_commitments",
    "crates/common/validator/beacon",
    "crates/common/validator/lean",
    "crates/crypto/bls",
    "crates/crypto/keystore",
    "crates/crypto/merkle",
    "crates/crypto/pqc",
    "crates/networking/discv5",
    "crates/networking/manager",
    "crates/networking/p2p",
    "crates/networking/syncer",
    "crates/rpc/beacon",
    "crates/rpc/lean",
    "crates/runtime",
    "crates/storage",
    "testing/beacon-api",
    "testing/ef-tests",
    "testing/gossip-validation",
]
resolver = "2"
exclude = ["book/cli"]

[workspace.package]
authors = ["https://github.com/ReamLabs/ream/graphs/contributors"]
edition = "2024"
keywords = [
    "ethereum",
    "beam-chain",
    "blockchain",
    "consensus",
    "protocol",
    "ream",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ReamLabs/ream"
rust-version = "1.88.0"
version = "0.1.0"

[workspace.dependencies]
actix-web = "4.10.2"
actix-web-lab = "0.24.1"
aes = "0.8.4"
alloy-consensus = { version = "1.0", default-features = false }
alloy-primitives = { version = "1.1", features = ['serde'] }
alloy-rlp = { version = "0.3.8", default-features = false, features = ["derive"] }
alloy-rpc-types-beacon = "1.0.8"
alloy-rpc-types-eth = "1.0.7"
anyhow = "1.0"
async-trait = "0.1.86"
bip32 = "0.5.3"
clap = "4"
delay_map = "0.4.1"
directories = { version = "6.0.0" }
discv5 = { version = "0.9.0", features = ["libp2p"] }
enr = "0.13.0"
ethereum_hashing = { git = "https://github.com/ReamLabs/ethereum_hashing.git" }
ethereum_serde_utils = "0.8"
ethereum_ssz = "0.9"
ethereum_ssz_derive = "0.9"
eventsource-client = "0.15.0"
futures = "0.3"
hashbrown = "0.15.3"
hashsig = { git = "https://github.com/b-wagn/hash-sig" }
itertools = "0.14"
jsonwebtoken = "9.3.1"
kzg = { git = "https://github.com/grandinetech/rust-kzg" }
libp2p = { version = "0.55", default-features = false, features = ["identify", "yamux", "noise", "dns", "serde", "tcp", "tokio", "plaintext", "secp256k1", "macros", "ecdsa", "metrics", "quic", "upnp", "gossipsub", "ping"] }
libp2p-identity = "0.2"
libp2p-mplex = "0.43"
lru = "0.15.0"
parking_lot = "0.12.3"
rand = "0.8"
rand_chacha = "0.3"
redb = { version = "2.4.0" }
reqwest = { version = "0.12", features = ["json"] }
rstest = "0.25"
rust-kzg-blst = { git = 'https://github.com/grandinetech/rust-kzg.git' }
serde = { version = '1.0', features = ['derive', "rc"] }
serde_json = "1.0.139"
serde_yaml = "0.9"
sha2 = "0.10"
snap = "1.1"
ssz_types = { git = "https://github.com/ReamLabs/ssz_types", branch = "removable-variable-list" }
tempdir = "0.3.7"
tempfile = "3.19"
thiserror = "2.0.11"
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "sync", "signal", "time", "macros"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tree_hash = "0.10"
tree_hash_derive = "0.10"
unicode-normalization = "0.1.24"
url = "2.5"

# ream dependencies
ream-account-manager = { path = "crates/account_manager" }
ream-beacon-api-types = { path = "crates/common/beacon_api_types" }
ream-bls = { path = "crates/crypto/bls", features = ["zkcrypto"] } # Default feature is zkcrypto
ream-chain-beacon = { path = "crates/common/chain/beacon" }
ream-chain-lean = { path = "crates/common/chain/lean" }
ream-checkpoint-sync = { path = "crates/common/checkpoint_sync" }
ream-consensus-beacon = { path = "crates/common/consensus/beacon" }
ream-consensus-lean = { path = "crates/common/consensus/lean" }
ream-consensus-misc = { path = "crates/common/consensus/misc" }
ream-discv5 = { path = "crates/networking/discv5" }
ream-execution-engine = { path = "crates/common/execution_engine" }
ream-executor = { path = "crates/common/executor" }
ream-fork-choice = { path = "crates/common/fork_choice" }
ream-keystore = { path = "crates/crypto/keystore" }
ream-light-client = { path = "crates/common/light_client" }
ream-merkle = { path = "crates/crypto/merkle" }
ream-network-manager = { path = "crates/networking/manager" }
ream-network-spec = { path = "crates/common/network_spec" }
ream-node = { path = "crates/common/node" }
ream-operation-pool = { path = "crates/common/operation_pool" }
ream-p2p = { path = "crates/networking/p2p" }
ream-polynomial-commitments = { path = "crates/common/polynomial_commitments" }
ream-pqc = { path = "crates/crypto/pqc" }
ream-rpc-beacon = { path = "crates/rpc/beacon" }
ream-storage = { path = "crates/storage" }
ream-syncer = { path = "crates/networking/syncer" }
ream-validator-beacon = { path = "crates/common/validator/beacon" }
ream-validator-lean = { path = "crates/common/validator/lean" }

[patch.crates-io]
ethereum_hashing = { git = "https://github.com/ReamLabs/ethereum_hashing.git" }
