[package]
name = "ream-account-manager"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
hashsig.workspace = true
rand.workspace = true
rand_chacha.workspace = true
sha2.workspace = true
tracing.workspace = true

# ream dependencies
ream-pqc.workspace = true
