[package]
name = "ream-rpc"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
#ream-dependencies
ream-bls.workspace = true
ream-consensus.workspace = true
ream-light-client.workspace = true
ream-network-spec.workspace = true
ream-node.workspace = true
ream-storage.workspace = true

#misc
actix-web.workspace = true
actix-web-lab.workspace = true
alloy-primitives.workspace = true
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
parking_lot.workspace = true
ethereum_serde_utils.workspace = true
serde.workspace = true
serde_json.workspace = true
ssz_types.workspace = true
thiserror.workspace = true
tracing.workspace = true
tree_hash.workspace = true
