[package]
name = "ream-rpc"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
actix-web.workspace = true
actix-web-lab.workspace = true
alloy-primitives.workspace = true
discv5.workspace = true
ethereum_serde_utils.workspace = true
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
hashbrown.workspace = true
libp2p.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
ssz_types.workspace = true
thiserror.workspace = true
tracing.workspace = true
tree_hash.workspace = true

#ream-dependencies
ream-beacon-api-types.workspace = true
ream-bls.workspace = true
ream-consensus.workspace = true
ream-fork-choice.workspace = true
ream-light-client.workspace = true
ream-network-spec.workspace = true
ream-node.workspace = true
ream-operation-pool.workspace = true
ream-p2p.workspace = true
ream-storage.workspace = true
