[package]
name = "ream-storage"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
directories.workspace = true
ethereum_ssz.workspace = true
redb.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true
tree_hash.workspace = true

# ream dependencies
ream-consensus.workspace = true
