[package]
name = "beacon-api-tests"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

# ream
ream-beacon-api-types.workspace = true
ream-consensus-beacon.workspace = true
ream-consensus-misc.workspace = true
