[package]
name = "ream-account-manager"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
bip39.workspace = true
chrono = { version = "0.4", features = ["serde"] }
hex.workspace = true
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid = { version = "1.0", features = ["v4", "serde"] }
