[package]
name = "ream-checkpoint-sync"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tree_hash.workspace = true

# ream dependencies
ream-consensus-beacon.workspace = true
ream-consensus-misc.workspace = true
ream-fork-choice.workspace = true
ream-network-spec.workspace = true
ream-storage.workspace = true

[lints]
workspace = true
