[package]
name = "ream-execution-engine"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types-eth.workspace = true
anyhow.workspace = true
async-trait.workspace = true
ethereum_serde_utils.workspace = true
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
ssz_types.workspace = true
tokio.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true

# ream dependencies
ream-consensus-beacon.workspace = true
ream-consensus-misc.workspace = true

[lints]
workspace = true
