[package]
name = "ream-executor"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
futures.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
