[package]
name = "ream-network-spec"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy-primitives.workspace = true
serde.workspace = true

# ream-dependencies
ream-consensus.workspace = true
