[package]
name = "ream-operation-pool"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy-primitives.workspace = true
parking_lot.workspace = true
tree_hash.workspace = true

# ream dependencies
ream-consensus-beacon.workspace = true
ream-consensus-misc.workspace = true
