[package]
name = "ream-validator"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-rpc-types-beacon.workspace = true
anyhow.workspace = true
ethereum_hashing.workspace = true
ethereum_serde_utils.workspace = true
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
eventsource-client.workspace = true
futures.workspace = true
ream-beacon-api-types.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
ssz_types.workspace = true
tokio.workspace = true
tracing.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true

# ream dependencies
ream-bls.workspace = true
ream-consensus.workspace = true
ream-execution-engine.workspace = true
ream-executor.workspace = true
ream-keystore.workspace = true
ream-network-spec.workspace = true
