[package]
name = "ream-bls"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
blst = { version = "0.3", optional = true }
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
serde.workspace = true
ssz_types.workspace = true
thiserror.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true

[features]
default = ["supranational"]

supranational = ["blst"]
zkcrypto = []
