[package]
name = "ream-keystore"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
aes.workspace = true
alloy-primitives.workspace = true
anyhow.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
ssz_types.workspace = true
uuid = { version = "1.0", features = ["v4", "serde"] }

# ream dependencies
ream-bls.workspace = true

[lints]
workspace = true
