[package]
name = "ream-merkle"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
ethereum_hashing.workspace = true
serde.workspace = true
