[package]
name = "ream-post-quantum-crypto"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["signature-scheme-prod"]

signature-scheme-prod = []
signature-scheme-test = []

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
hashsig.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true
