[package]
name = "ream-discv5"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-rlp.workspace = true
anyhow.workspace = true
discv5.workspace = true
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
futures.workspace = true
libp2p.workspace = true
tokio.workspace = true
tracing.workspace = true


# ream dependencies
ream-consensus.workspace = true
