[package]
name = "ream-network-manager"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
discv5.workspace = true
libp2p.workspace = true
tokio.workspace = true
tracing.workspace = true
tree_hash.workspace = true
url.workspace = true

# ream dependencies
ream-beacon-chain.workspace = true
ream-consensus.workspace = true
ream-discv5.workspace = true
ream-execution-engine.workspace = true
ream-executor.workspace = true
ream-fork-choice.workspace = true
ream-network-spec.workspace = true
ream-operation-pool.workspace = true
ream-p2p.workspace = true
ream-storage.workspace = true
ream-syncer.workspace = true
