[package]
name = "ream-p2p"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
asynchronous-codec = "0.7.0"
delay_map.workspace = true
discv5.workspace = true
enr.workspace = true
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
futures.workspace = true
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "arithmetic"] }
libp2p.workspace = true
libp2p-identity.workspace = true
libp2p-mplex.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
snap.workspace = true
ssz_types.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-io-timeout = "1"
tokio-util.workspace = true
tracing = { workspace = true, features = ["log"] }
tracing-subscriber.workspace = true
tracing-test.workspace = true
tree_hash.workspace = true
unsigned-varint = { version = "0.8", features = ["codec"] }

# ream dependencies
ream-chain-lean.workspace = true
ream-consensus-beacon.workspace = true
ream-consensus-lean.workspace = true
ream-consensus-misc.workspace = true
ream-discv5.workspace = true
ream-executor.workspace = true
ream-light-client.workspace = true
ream-network-spec.workspace = true
ream-validator-beacon.workspace = true
